--- a/event.css
+++ b/event.css
@@ -64,6 +64,7 @@ p {
 	color: white;
 	background-color: rgb(32, 226, 233);
 }
+
 .brand h1 {
 	font-size: 3rem;
 	text-transform: uppercase;
@@ -202,7 +203,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url("./img/IA-technologie\ copie.png");
+	background-image: url("img/7270016.png");
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -219,6 +220,14 @@ p {
 	opacity: 0.3;
 	z-index: -1;
 }
+
+.hero p {
+color: white;
+font-size: 30px;
+font-weight: 700;
+margin-top: 50px;
+}
+
 #hero .hero {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -265,80 +274,6 @@ p {
 }
 
 /* End Hero Section */
-
-/* Event Modal */
-
-dialog {
-	width: 50%;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	margin-top: 70px;
-	background-color: #132536;
-	background-image: url("img/outil-IA.avif");
-	background-size: cover;
-	background-position: top center;
-	font-family: "Roboto";
-	text-align: center;
-	border: none;
-	border-radius: 15px;
-	color: white;
-	box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-
-dialog::backdrop {
-	background-color: rgba(1, 40, 85, 0.199);
-}
-
-#modal h2 {
-	font-size: 30px;
-}
-
-#modal p {
-	font-size: 14px;
-	color: white;
-}
-
-#closemodal {
-	display: inline-block;
-	padding: 10px 30px;
-	color: white;
-	background-color: transparent;
-	border: 2px solid rgb(184, 212, 253);
-	font-size: 1rem;
-	text-transform: uppercase;
-	letter-spacing: 0.1rem;
-	margin-top: 30px;
-	transition: 0.3s ease;
-	transition-property: background-color, color;
-	cursor: pointer;
-}
-
-.cta-event{
-	display: inline-block;
-	padding: 10px 30px;
-	color: white;
-	background-color: transparent;
-	border: 2px solid rgb(32, 226, 233);;
-	font-size: 1rem;
-	text-transform: uppercase;
-	letter-spacing: 0.1rem;
-	margin-top: 30px;
-	transition: 0.3s ease;
-	transition-property: background-color, color;
-	cursor: pointer;
-}
-
-.cta-event:hover {
-	color: white;
-	background-color: rgb(32, 226, 233);
-}
-
-#closemodal:hover {
-	color: white;
-	background-color: rgb(184, 212, 253);
-}
-
-/* End Event Modal */
 
 
 /* Services Section */
@@ -402,79 +337,6 @@ dialog::backdrop {
 	text-align: left;
 }
 /* End Services Section */
-
-/* Projects section */
-#projects .projects {
-	flex-direction: column;
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 100px 0;
-}
-#projects .projects-header h1 {
-	margin-bottom: 50px;
-}
-#projects .all-projects {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-}
-#projects .project-item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	width: 80%;
-	margin: 20px auto;
-	overflow: hidden;
-	border-radius: 10px;
-}
-#projects .project-info {
-	padding: 30px;
-	flex-basis: 50%;
-	height: 100%;
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	flex-direction: column;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	color: white;
-}
-#projects .project-info h1 {
-	font-size: 4rem;
-	font-weight: 500;
-}
-#projects .project-info h2 {
-	font-size: 1.8rem;
-	font-weight: 500;
-	margin-top: 10px;
-}
-#projects .project-info p {
-	color: white;
-}
-#projects .project-img {
-	flex-basis: 50%;
-	height: 300px;
-	overflow: hidden;
-	position: relative;
-}
-#projects .project-img:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: 0.7;
-}
-#projects .project-img img {
-	transition: 0.3s ease transform;
-}
-#projects .project-item:hover .project-img img {
-	transform: scale(1.1);
-}
-/* End Projects section */
 
 /* About Section */
 #about .about {
@@ -661,27 +523,6 @@ dialog::backdrop {
 		margin: 2.5%;
 	}
 	/* End Services Section */
-
-	/* Project */
-	#projects .project-item {
-		flex-direction: row;
-	}
-	#projects .project-item:nth-child(even) {
-		flex-direction: row-reverse;
-	}
-	#projects .project-item {
-		height: 400px;
-		margin: 0;
-		width: 100%;
-		border-radius: 0;
-	}
-	#projects .all-projects .project-info {
-		height: 100%;
-	}
-	#projects .all-projects .project-img {
-		height: 100%;
-	}
-	/* End Project */
 
 	/* About */
 	#about .about {
